tests/ui/borrowck/borrowck-or-init.stderr
error[E0381]: used binding `i` is possibly-uninitialized
  --> $DIR/borrowck-or-init.rs:5:20
   |
LL |     let i: isize;
   |         - binding declared here but left uninitialized
LL |
LL |     println!("{}", false || { i = 5; true });
   |                               ----- binding initialized here in some conditions
LL |     println!("{}", i);
   |                    ^ `i` used here but it is possibly-uninitialized
   |
   = note: this error originates in the macro `$crate::format_args_nl` which comes from the expansion of the macro `println` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0381`.
